--- a/style-rtl.css
+++ b/style-rtl.css
@@ -7029,7 +7029,7 @@ ul.page-numbers[class][class] {
     border-top: 0 solid transparent;
     border-top-width: 56px;
     background-clip: padding-box;
-    margin-top: 0 !important; }
+    margin-top: 0; }
     @media only screen and (max-width: 1360px) {
       .o-layout .widget.widget_promo_box--dark,
       .o-layout .widget.highlighted,
@@ -7104,43 +7104,8 @@ ul.page-numbers[class][class] {
   border-top-width: 0;
   margin-top: 0; }
 
-.content-area + .u-container-sides-spacing:not(.site-footer) .widget-area--footer-featured {
-  margin-top: 1px; }
-
 .o-layout .widget-area--footer-featured > .widget:nth-of-type(2n+1):last-child:not(.highlighted):not(.widget_promo_box):not(.jetpack_subscription_widget) {
   margin-bottom: 0; }
-
-.o-layout .o-layout__full .widget:nth-of-type(2n) + .widget:nth-of-type(2n), .o-layout .o-layout__full
-.highlighted + .widget:nth-of-type(2n), .o-layout .o-layout__full
-.widget_promo_box + .widget:nth-of-type(2n), .o-layout .o-layout__full
-.jetpack_subscription_widget + .widget:nth-of-type(2n), .o-layout .o-layout__full .widget:nth-of-type(2n) +
-.highlighted, .o-layout .o-layout__full
-.highlighted +
-.highlighted, .o-layout .o-layout__full
-.widget_promo_box +
-.highlighted, .o-layout .o-layout__full
-.jetpack_subscription_widget +
-.highlighted, .o-layout .o-layout__full .widget:nth-of-type(2n) +
-.widget_promo_box, .o-layout .o-layout__full
-.highlighted +
-.widget_promo_box, .o-layout .o-layout__full
-.widget_promo_box +
-.widget_promo_box, .o-layout .o-layout__full
-.jetpack_subscription_widget +
-.widget_promo_box, .o-layout .o-layout__full .widget:nth-of-type(2n) +
-.jetpack_subscription_widget, .o-layout .o-layout__full
-.highlighted +
-.jetpack_subscription_widget, .o-layout .o-layout__full
-.widget_promo_box +
-.jetpack_subscription_widget, .o-layout .o-layout__full
-.jetpack_subscription_widget +
-.jetpack_subscription_widget {
-  margin-top: 1px; }
-
-.singular .content-area + .u-container-sides-spacing .o-layout__full > .highlighted:first-child,
-.singular .content-area + .u-container-sides-spacing .o-layout__full > .widget_promo_box:first-child,
-.singular .content-area + .u-container-sides-spacing .o-layout__full > .jetpack_subscription_widget:first-child {
-  margin-top: 1px; }
 
 .widget.dark {
   background-color: #1C1C1C;
